# async_q

./: .gitignore  README.md  ROADMAP.md  license  pyproject.toml
example/django-example/: Dockerfile  README.md  docker-compose.yml  requirements.txt
example/django-example/core/: asgi.py  settings.py  urls.py  wsgi.py
example/django-example/templates/web_crawler/: index.html  product-item.html  queued_items_list.html
example/django-example/web_crawler/: admin.py  apps.py  models.py  service.py  urls.py  utils.py  views.py
example/django-example/web_crawler/migrations/: 0001_initial.py  0002_alter_amazonproductitem_asin.py  0003_amazonproductitem_type.py
src/async_q/: __init__.py  __main__.py  async_q.py  async_worker.py  utils.py
src/async_task_queue/: __init__.py  async_task_queue.py
tests/: conftest.py  test_async_q_core.py  test_async_worker_queue.py  test_cli_app_resolution.py  test_retry_and_dlq.py  test_utils.py  test_utils_misc.py
