[project]
name = "async_task_queue"
version = "0.0.1"
authors = [
  { name="tumzied", email="author@example.com" },
]
description = "A simple worker task queue with async support "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""
