[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "async_q"
version = "0.0.1"
authors = [
  { name="tumzied_", email="50454992+tz01x@users.noreply.github.com" },
]
description = "A simple worker task queue with async support "
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tz01x/async_q"
"Bug Tracker" = "http//someurl.com"

[dependencies]
redis = "5.0.0"
